--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,3 +29,10 @@ jobs:
       - run:
           name: Run PHPUnit
           command: vendor/bin/phpunit
+      #heroku deploy
+      - deploy:
+          name: Deploy main to Heroku
+          command: |
+            if [ "${CIRCLE_BRANCH}" == "main" ]; then
+              git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git main
+            fi
