--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,6 @@ jobs:
           paths:
             - ./vendor
           key: v1-dependencies-{{ checksum "composer.json" }}
-      - run:
-          name: Run PHPUnit
-          command: vendor/bin/phpunit
+      # - run:
+      #     name: Run PHPUnit
+      #     command: vendor/bin/phpunit
